grammar/CACTParser.cpp

    #include <vector>
    #include <string>


// Generated from CACT.g4 by ANTLR 4.13.1


#include "CACTVisitor.h"

#include "CACTParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CACTParserStaticData final {
  CACTParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CACTParserStaticData(const CACTParserStaticData&) = delete;
  CACTParserStaticData(CACTParserStaticData&&) = delete;
  CACTParserStaticData& operator=(const CACTParserStaticData&) = delete;
  CACTParserStaticData& operator=(CACTParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cactParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CACTParserStaticData *cactParserStaticData = nullptr;

void cactParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (cactParserStaticData != nullptr) {
    return;
  }
#else
  assert(cactParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CACTParserStaticData>(
    std::vector<std::string>{
      "functionType", "basicType", "primaryExpression", "unaryExpression", 
      "unaryOperator", "functionRParams", "additiveExpression", "multiplicativeExpression", 
      "relationalExpression", "equalityExpression", "logicalAndExpression", 
      "logicalOrExpression", "condition", "constantExpression", "constantInitValue", 
      "expression", "declaration", "constantDeclaration", "constantDefinition", 
      "variableDeclaration", "variableDefinition", "statement", "compoundStatement", 
      "expressionStatement", "selectionStatement", "iterationStatement", 
      "jumpStatement", "blockItem", "blockItemList", "leftValue", "compilationUnit", 
      "translationUnit", "externalDeclaration", "functionDefinition", "functionFParams", 
      "functionFParam", "number"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "'const'", "'continue'", "'while'", 
      "'break'", "'true'", "'false'", "'if'", "'else'", "'void'", "'int'", 
      "'char'", "'float'", "'double'", "'return'", "'('", "')'", "'['", 
      "']'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", 
      "'/'", "'%'", "'&&'", "'||'", "'!'", "';'", "','", "'='", "'=='", 
      "'!='", "'.'"
    },
    std::vector<std::string>{
      "", "Whitespace", "Newline", "CommentLine", "CommentBlock", "IntegerConstant", 
      "FloatingConstant", "CharacterConstant", "Const", "Continue", "While", 
      "Break", "True", "False", "If", "Else", "Void", "Int", "Char", "Float", 
      "Double", "Return", "LeftParenthesis", "RightParenthesis", "LeftBracket", 
      "RightBracket", "LeftBrace", "RightBrace", "Less", "LessEqual", "Greater", 
      "GreaterEqual", "Plus", "Minus", "Star", "Div", "Mod", "AndAnd", "OrOr", 
      "Not", "Semicolon", "Comma", "Assign", "Equal", "NotEqual", "Dot", 
      "Identifier"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cactParserStaticData = staticData.release();
}

}

CACTParser::CACTParser(TokenStream *input) : CACTParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CACTParser::CACTParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CACTParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cactParserStaticData->atn, cactParserStaticData->decisionToDFA, cactParserStaticData->sharedContextCache, options);
}

CACTParser::~CACTParser() {
  delete _interpreter;
}

const atn::ATN& CACTParser::getATN() const {
  return *cactParserStaticData->atn;
}

std::string CACTParser::getGrammarFileName() const {
  return "CACT.g4";
}

const std::vector<std::string>& CACTParser::getRuleNames() const {
  return cactParserStaticData->ruleNames;
}

const dfa::Vocabulary& CACTParser::getVocabulary() const {
  return cactParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CACTParser::getSerializedATN() const {
  return cactParserStaticData->serializedATN;
}


//----------------- FunctionTypeContext ------------------------------------------------------------------

CACTParser::FunctionTypeContext::FunctionTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CACTParser::FunctionTypeContext::Void() {
  return getToken(CACTParser::Void, 0);
}

CACTParser::BasicTypeContext* CACTParser::FunctionTypeContext::basicType() {
  return getRuleContext<CACTParser::BasicTypeContext>(0);
}


size_t CACTParser::FunctionTypeContext::getRuleIndex() const {
  return CACTParser::RuleFunctionType;
}


std::any CACTParser::FunctionTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitFunctionType(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::FunctionTypeContext* CACTParser::functionType() {
  FunctionTypeContext *_localctx = _tracker.createInstance<FunctionTypeContext>(_ctx, getState());
  enterRule(_localctx, 0, CACTParser::RuleFunctionType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CACTParser::Void: {
        enterOuterAlt(_localctx, 1);
        setState(74);
        match(CACTParser::Void);
        break;
      }

      case CACTParser::Int:
      case CACTParser::Char:
      case CACTParser::Float:
      case CACTParser::Double: {
        enterOuterAlt(_localctx, 2);
        setState(75);
        basicType();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BasicTypeContext ------------------------------------------------------------------

CACTParser::BasicTypeContext::BasicTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CACTParser::BasicTypeContext::Int() {
  return getToken(CACTParser::Int, 0);
}

tree::TerminalNode* CACTParser::BasicTypeContext::Char() {
  return getToken(CACTParser::Char, 0);
}

tree::TerminalNode* CACTParser::BasicTypeContext::Float() {
  return getToken(CACTParser::Float, 0);
}

tree::TerminalNode* CACTParser::BasicTypeContext::Double() {
  return getToken(CACTParser::Double, 0);
}


size_t CACTParser::BasicTypeContext::getRuleIndex() const {
  return CACTParser::RuleBasicType;
}


std::any CACTParser::BasicTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitBasicType(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::BasicTypeContext* CACTParser::basicType() {
  BasicTypeContext *_localctx = _tracker.createInstance<BasicTypeContext>(_ctx, getState());
  enterRule(_localctx, 2, CACTParser::RuleBasicType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1966080) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimaryExpressionContext ------------------------------------------------------------------

CACTParser::PrimaryExpressionContext::PrimaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CACTParser::LeftValueContext* CACTParser::PrimaryExpressionContext::leftValue() {
  return getRuleContext<CACTParser::LeftValueContext>(0);
}

CACTParser::NumberContext* CACTParser::PrimaryExpressionContext::number() {
  return getRuleContext<CACTParser::NumberContext>(0);
}

tree::TerminalNode* CACTParser::PrimaryExpressionContext::CharacterConstant() {
  return getToken(CACTParser::CharacterConstant, 0);
}

tree::TerminalNode* CACTParser::PrimaryExpressionContext::LeftParenthesis() {
  return getToken(CACTParser::LeftParenthesis, 0);
}

CACTParser::ExpressionContext* CACTParser::PrimaryExpressionContext::expression() {
  return getRuleContext<CACTParser::ExpressionContext>(0);
}

tree::TerminalNode* CACTParser::PrimaryExpressionContext::RightParenthesis() {
  return getToken(CACTParser::RightParenthesis, 0);
}


size_t CACTParser::PrimaryExpressionContext::getRuleIndex() const {
  return CACTParser::RulePrimaryExpression;
}


std::any CACTParser::PrimaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitPrimaryExpression(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::PrimaryExpressionContext* CACTParser::primaryExpression() {
  PrimaryExpressionContext *_localctx = _tracker.createInstance<PrimaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 4, CACTParser::RulePrimaryExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(87);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CACTParser::Identifier: {
        enterOuterAlt(_localctx, 1);
        setState(80);
        leftValue();
        break;
      }

      case CACTParser::IntegerConstant:
      case CACTParser::FloatingConstant: {
        enterOuterAlt(_localctx, 2);
        setState(81);
        number();
        break;
      }

      case CACTParser::CharacterConstant: {
        enterOuterAlt(_localctx, 3);
        setState(82);
        match(CACTParser::CharacterConstant);
        break;
      }

      case CACTParser::LeftParenthesis: {
        enterOuterAlt(_localctx, 4);
        setState(83);
        match(CACTParser::LeftParenthesis);
        setState(84);
        expression();
        setState(85);
        match(CACTParser::RightParenthesis);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryExpressionContext ------------------------------------------------------------------

CACTParser::UnaryExpressionContext::UnaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CACTParser::PrimaryExpressionContext* CACTParser::UnaryExpressionContext::primaryExpression() {
  return getRuleContext<CACTParser::PrimaryExpressionContext>(0);
}

CACTParser::UnaryOperatorContext* CACTParser::UnaryExpressionContext::unaryOperator() {
  return getRuleContext<CACTParser::UnaryOperatorContext>(0);
}

CACTParser::UnaryExpressionContext* CACTParser::UnaryExpressionContext::unaryExpression() {
  return getRuleContext<CACTParser::UnaryExpressionContext>(0);
}

tree::TerminalNode* CACTParser::UnaryExpressionContext::Identifier() {
  return getToken(CACTParser::Identifier, 0);
}

tree::TerminalNode* CACTParser::UnaryExpressionContext::LeftParenthesis() {
  return getToken(CACTParser::LeftParenthesis, 0);
}

tree::TerminalNode* CACTParser::UnaryExpressionContext::RightParenthesis() {
  return getToken(CACTParser::RightParenthesis, 0);
}

CACTParser::FunctionRParamsContext* CACTParser::UnaryExpressionContext::functionRParams() {
  return getRuleContext<CACTParser::FunctionRParamsContext>(0);
}


size_t CACTParser::UnaryExpressionContext::getRuleIndex() const {
  return CACTParser::RuleUnaryExpression;
}


std::any CACTParser::UnaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitUnaryExpression(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::UnaryExpressionContext* CACTParser::unaryExpression() {
  UnaryExpressionContext *_localctx = _tracker.createInstance<UnaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 6, CACTParser::RuleUnaryExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(99);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(89);
      primaryExpression();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(90);
      unaryOperator();
      setState(91);
      unaryExpression();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(93);
      match(CACTParser::Identifier);
      setState(94);
      match(CACTParser::LeftParenthesis);
      setState(96);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 70931389087968) != 0)) {
        setState(95);
        functionRParams();
      }
      setState(98);
      match(CACTParser::RightParenthesis);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryOperatorContext ------------------------------------------------------------------

CACTParser::UnaryOperatorContext::UnaryOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CACTParser::UnaryOperatorContext::Plus() {
  return getToken(CACTParser::Plus, 0);
}

tree::TerminalNode* CACTParser::UnaryOperatorContext::Minus() {
  return getToken(CACTParser::Minus, 0);
}

tree::TerminalNode* CACTParser::UnaryOperatorContext::Not() {
  return getToken(CACTParser::Not, 0);
}


size_t CACTParser::UnaryOperatorContext::getRuleIndex() const {
  return CACTParser::RuleUnaryOperator;
}


std::any CACTParser::UnaryOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitUnaryOperator(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::UnaryOperatorContext* CACTParser::unaryOperator() {
  UnaryOperatorContext *_localctx = _tracker.createInstance<UnaryOperatorContext>(_ctx, getState());
  enterRule(_localctx, 8, CACTParser::RuleUnaryOperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 562640715776) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionRParamsContext ------------------------------------------------------------------

CACTParser::FunctionRParamsContext::FunctionRParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CACTParser::ExpressionContext *> CACTParser::FunctionRParamsContext::expression() {
  return getRuleContexts<CACTParser::ExpressionContext>();
}

CACTParser::ExpressionContext* CACTParser::FunctionRParamsContext::expression(size_t i) {
  return getRuleContext<CACTParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> CACTParser::FunctionRParamsContext::Comma() {
  return getTokens(CACTParser::Comma);
}

tree::TerminalNode* CACTParser::FunctionRParamsContext::Comma(size_t i) {
  return getToken(CACTParser::Comma, i);
}


size_t CACTParser::FunctionRParamsContext::getRuleIndex() const {
  return CACTParser::RuleFunctionRParams;
}


std::any CACTParser::FunctionRParamsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitFunctionRParams(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::FunctionRParamsContext* CACTParser::functionRParams() {
  FunctionRParamsContext *_localctx = _tracker.createInstance<FunctionRParamsContext>(_ctx, getState());
  enterRule(_localctx, 10, CACTParser::RuleFunctionRParams);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    expression();
    setState(108);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CACTParser::Comma) {
      setState(104);
      match(CACTParser::Comma);
      setState(105);
      expression();
      setState(110);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AdditiveExpressionContext ------------------------------------------------------------------

CACTParser::AdditiveExpressionContext::AdditiveExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CACTParser::MultiplicativeExpressionContext *> CACTParser::AdditiveExpressionContext::multiplicativeExpression() {
  return getRuleContexts<CACTParser::MultiplicativeExpressionContext>();
}

CACTParser::MultiplicativeExpressionContext* CACTParser::AdditiveExpressionContext::multiplicativeExpression(size_t i) {
  return getRuleContext<CACTParser::MultiplicativeExpressionContext>(i);
}

std::vector<tree::TerminalNode *> CACTParser::AdditiveExpressionContext::Plus() {
  return getTokens(CACTParser::Plus);
}

tree::TerminalNode* CACTParser::AdditiveExpressionContext::Plus(size_t i) {
  return getToken(CACTParser::Plus, i);
}

std::vector<tree::TerminalNode *> CACTParser::AdditiveExpressionContext::Minus() {
  return getTokens(CACTParser::Minus);
}

tree::TerminalNode* CACTParser::AdditiveExpressionContext::Minus(size_t i) {
  return getToken(CACTParser::Minus, i);
}


size_t CACTParser::AdditiveExpressionContext::getRuleIndex() const {
  return CACTParser::RuleAdditiveExpression;
}


std::any CACTParser::AdditiveExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitAdditiveExpression(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::AdditiveExpressionContext* CACTParser::additiveExpression() {
  AdditiveExpressionContext *_localctx = _tracker.createInstance<AdditiveExpressionContext>(_ctx, getState());
  enterRule(_localctx, 12, CACTParser::RuleAdditiveExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    multiplicativeExpression();
    setState(116);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CACTParser::Plus

    || _la == CACTParser::Minus) {
      setState(112);
      antlrcpp::downCast<AdditiveExpressionContext *>(_localctx)->op = _input->LT(1);
      _la = _input->LA(1);
      if (!(_la == CACTParser::Plus

      || _la == CACTParser::Minus)) {
        antlrcpp::downCast<AdditiveExpressionContext *>(_localctx)->op = _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(113);
      multiplicativeExpression();
      setState(118);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MultiplicativeExpressionContext ------------------------------------------------------------------

CACTParser::MultiplicativeExpressionContext::MultiplicativeExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CACTParser::UnaryExpressionContext *> CACTParser::MultiplicativeExpressionContext::unaryExpression() {
  return getRuleContexts<CACTParser::UnaryExpressionContext>();
}

CACTParser::UnaryExpressionContext* CACTParser::MultiplicativeExpressionContext::unaryExpression(size_t i) {
  return getRuleContext<CACTParser::UnaryExpressionContext>(i);
}

std::vector<tree::TerminalNode *> CACTParser::MultiplicativeExpressionContext::Star() {
  return getTokens(CACTParser::Star);
}

tree::TerminalNode* CACTParser::MultiplicativeExpressionContext::Star(size_t i) {
  return getToken(CACTParser::Star, i);
}

std::vector<tree::TerminalNode *> CACTParser::MultiplicativeExpressionContext::Div() {
  return getTokens(CACTParser::Div);
}

tree::TerminalNode* CACTParser::MultiplicativeExpressionContext::Div(size_t i) {
  return getToken(CACTParser::Div, i);
}

std::vector<tree::TerminalNode *> CACTParser::MultiplicativeExpressionContext::Mod() {
  return getTokens(CACTParser::Mod);
}

tree::TerminalNode* CACTParser::MultiplicativeExpressionContext::Mod(size_t i) {
  return getToken(CACTParser::Mod, i);
}


size_t CACTParser::MultiplicativeExpressionContext::getRuleIndex() const {
  return CACTParser::RuleMultiplicativeExpression;
}


std::any CACTParser::MultiplicativeExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitMultiplicativeExpression(this);
  else
    return visitor->visitChildren(this);
}
